--- a/stylesSass.scss
+++ b/stylesSass.scss
@@ -243,6 +243,9 @@ h3{
 #contact{
 	background-color: #1B1A26;
 	line-height: 1.5em;
+	h2{
+		margin-top: 40px;
+	}
 	p{
 		padding: 10px;
 		width: 180px;
